// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`geocoder ARCGIS should get location from geocode feature 1`] = `
Object {
  "lat": 51.973520000000065,
  "lon": 0.1296100000000706,
  "name": "Mill End, Clavering, Saffron Walden, Essex, England, GBR",
  "rawGeocodedFeature": Object {
    "geometry": Object {
      "coordinates": Array [
        0.1296100000000706,
        51.973520000000065,
      ],
      "type": "Point",
    },
    "properties": Object {
      "confidence": 0.875,
      "country": "GBR",
      "country_a": "GBR",
      "county": "Essex",
      "label": "Mill End, Clavering, Saffron Walden, Essex, England, GBR",
      "locality": "Saffron Walden",
      "name": "Mill End",
      "neighbourhood": "Mill End",
      "region": "England",
      "resultId": undefined,
    },
    "type": "Feature",
  },
}
`;

exports[`geocoder ARCGIS should make autocomplete query 1`] = `
Object {
  "features": Array [
    Object {
      "isCollection": false,
      "magicKey": "dHA9MCNsb2M9ODU3OTE0NyNsbmc9MzMjcGw9MzI4OTA3MSNsYnM9MTQ6MjAwNTI3NTc=",
      "properties": Object {
        "label": "Mill Ends City Park, Portland, OR, USA",
      },
      "text": "Mill Ends City Park, Portland, OR, USA",
    },
    Object {
      "isCollection": false,
      "magicKey": "dHA9MCNsb2M9OTY5Mzc0MiNsbmc9MzMjcGw9NTA4NTQ2NiNsYnM9MTQ6MjAwNTI3NTI=",
      "properties": Object {
        "label": "Mill End Sports & Social, Penn Road, Mill End, Rickmansworth, Hertfordshire, England, WD3 8, GBR",
      },
      "text": "Mill End Sports & Social, Penn Road, Mill End, Rickmansworth, Hertfordshire, England, WD3 8, GBR",
    },
  ],
}
`;

exports[`geocoder ARCGIS should make reverse query 1`] = `
Object {
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "SW Naito Pkwy, Portland, OR, 97204, USA",
  "rawGeocodedFeature": Object {
    "geometry": Object {
      "coordinates": Array [
        -122.67320084756255,
        45.516175523600715,
      ],
      "type": "Point",
    },
    "properties": Object {
      "country_a": "USA",
      "county": "Multnomah County",
      "label": "SW Naito Pkwy, Portland, OR, 97204, USA",
      "locality": undefined,
      "name": "SW Naito Pkwy",
      "neighbourhood": "Downtown",
      "region": "Oregon",
    },
    "type": "Feature",
  },
}
`;

exports[`geocoder ARCGIS should make reverse query with featurecollection enabled 1`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.67320084756255,
          45.516175523600715,
        ],
        "type": "Point",
      },
      "properties": Object {
        "country_a": "USA",
        "county": "Multnomah County",
        "label": "SW Naito Pkwy, Portland, OR, 97204, USA",
        "locality": undefined,
        "name": "SW Naito Pkwy",
        "neighbourhood": "Downtown",
        "region": "Oregon",
      },
      "type": "Feature",
    },
  ],
  "query": Object {
    "x": -122.67324,
    "y": 45.516198,
  },
}
`;

exports[`geocoder ARCGIS should make search query 1`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          0.1296100000000706,
          51.973520000000065,
        ],
        "type": "Point",
      },
      "properties": Object {
        "confidence": 0.875,
        "country": "GBR",
        "country_a": "GBR",
        "county": "Essex",
        "label": "Mill End, Clavering, Saffron Walden, Essex, England, GBR",
        "locality": "Saffron Walden",
        "name": "Mill End",
        "neighbourhood": "Mill End",
        "region": "England",
        "resultId": undefined,
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -0.8668999999999301,
          51.558340000000044,
        ],
        "type": "Point",
      },
      "properties": Object {
        "confidence": 0.875,
        "country": "GBR",
        "country_a": "GBR",
        "county": "Oxfordshire",
        "label": "Mill End, Hambleden, Henley-on-Thames, Oxfordshire, England, GBR",
        "locality": "Henley-on-Thames",
        "name": "Mill End",
        "neighbourhood": "Mill End",
        "region": "England",
        "resultId": undefined,
      },
      "type": "Feature",
    },
  ],
  "query": Object {
    "text": "Mill Ends",
  },
}
`;

exports[`geocoder HERE should get location from geocode feature 1`] = `
Object {
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "Mill Ends Park, Portland, OR, USA",
  "rawGeocodedFeature": Object {
    "geometry": Object {
      "coordinates": Array [
        -122.67324,
        45.516198,
      ],
      "type": "Point",
    },
    "properties": Object {
      "label": "Mill Ends Park, Portland, OR, USA",
    },
  },
}
`;

exports[`geocoder HERE should make autocomplete query 1`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.31701,
          47.68199,
        ],
        "type": "Point",
      },
      "properties": Object {
        "addendum": Object {
          "categories": Array [
            Object {
              "id": "600-6300-0066",
              "name": "Grocery",
              "primary": true,
            },
            Object {
              "id": "600-6400-0000",
              "name": "Drugstore or Pharmacy",
            },
            Object {
              "id": "600-6400-0069",
              "name": "Drugstore",
            },
            Object {
              "id": "600-6400-0070",
              "name": "Pharmacy",
            },
          ],
        },
        "country": "United States",
        "country_a": "USA",
        "country_code": "USA",
        "county": "King",
        "housenumber": "7300",
        "label": "Safeway, 7300 Roosevelt Way NE, Seattle, WA 98115-5658, United States",
        "layer": "venue",
        "locality": "Seattle",
        "name": "Safeway",
        "neighbourhood": "Roosevelt",
        "postalcode": "98115-5658",
        "region": "Washington",
        "source": "here",
        "street": "Roosevelt Way NE",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.31388,
          47.66427,
        ],
        "type": "Point",
      },
      "properties": Object {
        "addendum": Object {
          "categories": Array [
            Object {
              "id": "600-6300-0066",
              "name": "Grocery",
              "primary": true,
            },
            Object {
              "id": "600-6400-0000",
              "name": "Drugstore or Pharmacy",
            },
            Object {
              "id": "600-6400-0070",
              "name": "Pharmacy",
            },
          ],
        },
        "country": "United States",
        "country_a": "USA",
        "country_code": "USA",
        "county": "King",
        "housenumber": "4732",
        "label": "Safeway, 4732 Brooklyn Ave NE, Seattle, WA 98105-4411, United States",
        "layer": "venue",
        "locality": "Seattle",
        "name": "Safeway",
        "neighbourhood": "University District",
        "postalcode": "98105-4411",
        "region": "Washington",
        "source": "here",
        "street": "Brooklyn Ave NE",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.28943,
          47.68261,
        ],
        "type": "Point",
      },
      "properties": Object {
        "addendum": Object {
          "categories": Array [
            Object {
              "id": "600-6300-0066",
              "name": "Grocery",
              "primary": true,
            },
            Object {
              "id": "600-6400-0000",
              "name": "Drugstore or Pharmacy",
            },
            Object {
              "id": "600-6400-0069",
              "name": "Drugstore",
            },
            Object {
              "id": "600-6400-0070",
              "name": "Pharmacy",
            },
          ],
        },
        "country": "United States",
        "country_a": "USA",
        "country_code": "USA",
        "county": "King",
        "housenumber": "7340",
        "label": "Safeway, 7340 35th Ave NE, Seattle, WA 98115, United States",
        "layer": "venue",
        "locality": "Seattle",
        "name": "Safeway",
        "neighbourhood": "Bryant",
        "postalcode": "98115",
        "region": "Washington",
        "source": "here",
        "street": "35th Ave NE",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.35496,
          47.69285,
        ],
        "type": "Point",
      },
      "properties": Object {
        "addendum": Object {
          "categories": Array [
            Object {
              "id": "600-6300-0066",
              "name": "Grocery",
              "primary": true,
            },
            Object {
              "id": "600-6400-0000",
              "name": "Drugstore or Pharmacy",
            },
            Object {
              "id": "600-6400-0070",
              "name": "Pharmacy",
            },
          ],
        },
        "country": "United States",
        "country_a": "USA",
        "country_code": "USA",
        "county": "King",
        "housenumber": "8704",
        "label": "Safeway, 8704 Greenwood Ave N, Seattle, WA 98103, United States",
        "layer": "venue",
        "locality": "Seattle",
        "name": "Safeway",
        "neighbourhood": "Greenwood",
        "postalcode": "98103",
        "region": "Washington",
        "source": "here",
        "street": "Greenwood Ave N",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`geocoder HERE should make reverse query 1`] = `
Object {
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "833 SW Naito Pkwy, Portland, OR 97204-3309, United States",
  "rawGeocodedFeature": Object {
    "geometry": Object {
      "coordinates": Array [
        -122.67357,
        45.5164,
      ],
      "type": "Point",
    },
    "properties": Object {
      "country": "United States",
      "country_a": "USA",
      "country_code": "USA",
      "county": "Multnomah",
      "housenumber": "833",
      "label": "833 SW Naito Pkwy, Portland, OR 97204-3309, United States",
      "layer": "address",
      "locality": "Portland",
      "name": "833 SW Naito Pkwy, Portland, OR 97204-3309, United States",
      "neighbourhood": "Downtown",
      "postalcode": "97204-3309",
      "region": "Oregon",
      "source": "here",
      "street": "SW Naito Pkwy",
    },
    "type": "Feature",
  },
}
`;

exports[`geocoder HERE should make reverse query with featurecollection enabled 1`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.67357,
          45.5164,
        ],
        "type": "Point",
      },
      "properties": Object {
        "country": "United States",
        "country_a": "USA",
        "country_code": "USA",
        "county": "Multnomah",
        "housenumber": "833",
        "label": "833 SW Naito Pkwy, Portland, OR 97204-3309, United States",
        "layer": "address",
        "locality": "Portland",
        "name": "833 SW Naito Pkwy, Portland, OR 97204-3309, United States",
        "neighbourhood": "Downtown",
        "postalcode": "97204-3309",
        "region": "Oregon",
        "source": "here",
        "street": "SW Naito Pkwy",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`geocoder HERE should make search query 1`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.31701,
          47.68199,
        ],
        "type": "Point",
      },
      "properties": Object {
        "addendum": Object {
          "categories": Array [
            Object {
              "id": "600-6300-0066",
              "name": "Grocery",
              "primary": true,
            },
            Object {
              "id": "600-6400-0000",
              "name": "Drugstore or Pharmacy",
            },
            Object {
              "id": "600-6400-0069",
              "name": "Drugstore",
            },
            Object {
              "id": "600-6400-0070",
              "name": "Pharmacy",
            },
          ],
        },
        "confidence": 1,
        "country": "United States",
        "country_a": "USA",
        "country_code": "USA",
        "county": "King",
        "housenumber": "7300",
        "label": "Safeway, 7300 Roosevelt Way NE, Seattle, WA 98115-5658, United States",
        "layer": "venue",
        "locality": "Seattle",
        "name": "Safeway",
        "neighbourhood": "Roosevelt",
        "postalcode": "98115-5658",
        "region": "Washington",
        "source": "here",
        "street": "Roosevelt Way NE",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`geocoder NoApiGeocoder should get location from geocode feature 1`] = `
Object {
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "45.516198, -122.673240",
  "rawGeocodedFeature": Object {
    "geometry": Object {
      "coordinates": Array [
        -122.67324,
        45.516198,
      ],
      "type": "Point",
    },
    "properties": Object {
      "label": "45.516198, -122.673240",
    },
  },
}
`;

exports[`geocoder NoApiGeocoder should make autocomplete query 1`] = `
Object {
  "features": Array [],
  "type": "FeatureCollection",
}
`;

exports[`geocoder NoApiGeocoder should make reverse query 1`] = `
Object {
  "lat": 45.5162,
  "lon": -122.67324,
  "name": "45.5162, -122.67324",
  "rawGeocodedFeature": Object {
    "geometry": Object {
      "coordinates": Array [
        45.5162,
        -122.67324,
      ],
      "type": "Point",
    },
    "properties": Object {
      "name": "45.5162, -122.67324",
    },
    "type": "Feature",
  },
}
`;

exports[`geocoder NoApiGeocoder should make reverse query with featurecollection enabled 1`] = `
Object {
  "lat": 45.5162,
  "lon": -122.67324,
  "name": "45.5162, -122.67324",
  "rawGeocodedFeature": Object {
    "geometry": Object {
      "coordinates": Array [
        45.5162,
        -122.67324,
      ],
      "type": "Point",
    },
    "properties": Object {
      "name": "45.5162, -122.67324",
    },
    "type": "Feature",
  },
}
`;

exports[`geocoder NoApiGeocoder should make search query 1`] = `
Object {
  "features": Array [],
  "type": "FeatureCollection",
}
`;

exports[`geocoder PELIAS should get location from geocode feature 1`] = `
Object {
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "Mill Ends Park, Portland, OR, USA",
  "rawGeocodedFeature": Object {
    "geometry": Object {
      "coordinates": Array [
        -122.67324,
        45.516198,
      ],
      "type": "Point",
    },
    "properties": Object {
      "label": "Mill Ends Park, Portland, OR, USA",
    },
  },
}
`;

exports[`geocoder PELIAS should make autocomplete query 1`] = `
Object {
  "bbox": Array [
    -122.673377,
    45.516278,
    -122.673377,
    45.516278,
  ],
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.673377,
          45.516278,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "point",
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "Multnomah County",
        "county_a": "MU",
        "county_gid": "whosonfirst:county:102081631",
        "distance": 0.491,
        "gid": "openstreetmap:venue:node/4243944023",
        "id": "node/4243944023",
        "label": "Mill Ends Park, Portland, OR, USA",
        "layer": "venue",
        "locality": "Portland",
        "locality_gid": "whosonfirst:locality:101715829",
        "name": "Mill Ends Park",
        "neighbourhood": "Downtown",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85867131",
        "region": "Oregon",
        "region_a": "OR",
        "region_gid": "whosonfirst:region:85688513",
        "source": "openstreetmap",
        "source_id": "node/4243944023",
      },
      "type": "Feature",
    },
  ],
  "geocoding": Object {
    "attribution": "http://lb-st-mapgeo.tri-met.org:4000/attribution",
    "engine": Object {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": Object {
      "focus.point.lat": 45.52,
      "focus.point.lon": -122.67,
      "lang": Object {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
      },
      "parsed_text": Object {},
      "parser": "addressit",
      "private": false,
      "size": 10,
      "text": "Mill Ends",
      "tokens": Array [
        "Mill",
        "Ends",
      ],
    },
    "timestamp": 1563948844191,
    "version": "0.2",
    "warnings": Array [
      "Invalid Parameter: api_key",
    ],
  },
  "isomorphicMapzenSearchQuery": Object {
    "api_key": "dummy-mapzen-key",
    "layers": "address,venue,street,intersection",
    "text": "Mill Ends",
  },
  "type": "FeatureCollection",
}
`;

exports[`geocoder PELIAS should make reverse query 1`] = `
Object {
  "lat": 45.516198,
  "lon": -122.67324,
  "name": "Mill Ends Park, 56 SW Taylor St, Portland",
  "rawGeocodedFeature": Object {
    "accuracy": "point",
    "address": "Mill Ends Park, 56 SW Taylor St, Portland 97204",
    "confidence": 0.9,
    "continent": "North America",
    "continent_gid": "whosonfirst:continent:102191575",
    "country": "United States",
    "country_a": "USA",
    "country_gid": "whosonfirst:country:85633793",
    "county": "Multnomah County",
    "county_a": "MU",
    "county_gid": "whosonfirst:county:102081631",
    "distance": 0.001,
    "gid": "openstreetmap:venue:way/156366633",
    "housenumber": "56",
    "id": "way/156366633",
    "label": "Mill Ends Park, 56 SW Taylor St, Portland",
    "latlng": Object {
      "lat": 45.516201,
      "lon": -122.673245,
    },
    "layer": "venue",
    "locality": "Portland",
    "locality_gid": "whosonfirst:locality:101715829",
    "name": "Mill Ends Park",
    "neighbourhood": "Downtown",
    "neighbourhood_gid": "whosonfirst:neighbourhood:85867131",
    "postalcode": "97204",
    "region": "Oregon",
    "region_a": "OR",
    "region_gid": "whosonfirst:region:85688513",
    "source": "openstreetmap",
    "source_id": "way/156366633",
    "street": "SW Taylor St",
  },
}
`;

exports[`geocoder PELIAS should make reverse query with featurecollection enabled 1`] = `
Object {
  "bbox": Array [
    -122.673883,
    45.5161964,
    -122.673234,
    45.516689,
  ],
  "features": Array [
    Object {
      "bbox": Array [
        -122.6732557,
        45.5161964,
        -122.673234,
        45.5162067,
      ],
      "geometry": Object {
        "coordinates": Array [
          -122.673245,
          45.516201,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "point",
        "confidence": 0.9,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "Multnomah County",
        "county_a": "MU",
        "county_gid": "whosonfirst:county:102081631",
        "distance": 0.001,
        "gid": "openstreetmap:venue:way/156366633",
        "housenumber": "56",
        "id": "way/156366633",
        "label": "Mill Ends Park, 56 SW Taylor St, Portland",
        "layer": "venue",
        "locality": "Portland",
        "locality_gid": "whosonfirst:locality:101715829",
        "name": "Mill Ends Park",
        "neighbourhood": "Downtown",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85867131",
        "postalcode": "97204",
        "region": "Oregon",
        "region_a": "OR",
        "region_gid": "whosonfirst:region:85688513",
        "source": "openstreetmap",
        "source_id": "way/156366633",
        "street": "SW Taylor St",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.673609,
          45.516337,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "point",
        "confidence": 0.8,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "Multnomah County",
        "county_a": "MU",
        "county_gid": "whosonfirst:county:102081631",
        "distance": 0.033,
        "gid": "openaddresses:address:us/or/portland_metro:bd3f9863242e4ec7",
        "housenumber": "833",
        "id": "us/or/portland_metro:bd3f9863242e4ec7",
        "label": "833 SW Naito Pkwy, Portland, OR, USA",
        "layer": "address",
        "locality": "Portland",
        "locality_gid": "whosonfirst:locality:101715829",
        "name": "833 SW Naito Pkwy",
        "neighbourhood": "Downtown",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85867131",
        "postalcode": "97204",
        "region": "Oregon",
        "region_a": "OR",
        "region_gid": "whosonfirst:region:85688513",
        "source": "openaddresses",
        "source_id": "us/or/portland_metro:bd3f9863242e4ec7",
        "street": "SW Naito Pkwy",
      },
      "type": "Feature",
    },
  ],
  "geocoding": Object {
    "attribution": "http://lb-st-mapgeo.tri-met.org:4000/attribution",
    "engine": Object {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": Object {
      "boundary.circle.lat": 45.516198,
      "boundary.circle.lon": -122.67324,
      "lang": Object {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
      },
      "point.lat": 45.516198,
      "point.lon": -122.67324,
      "private": false,
      "querySize": 20,
      "size": 10,
    },
    "timestamp": 1563949092620,
    "version": "0.2",
    "warnings": Array [
      "Invalid Parameter: api_key",
    ],
  },
  "isomorphicMapzenSearchQuery": Object {
    "api_key": "dummy-mapzen-key",
    "point": Object {
      "lat": 45.516198,
      "lon": -122.67324,
    },
  },
  "type": "FeatureCollection",
}
`;

exports[`geocoder PELIAS should make search query 1`] = `
Object {
  "bbox": Array [
    -122.821522,
    45.495264,
    -122.475528,
    45.516278,
  ],
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.673377,
          45.516278,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "point",
        "confidence": 1,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "Multnomah County",
        "county_a": "MU",
        "county_gid": "whosonfirst:county:102081631",
        "distance": 0.491,
        "gid": "openstreetmap:venue:node/4243944023",
        "id": "node/4243944023",
        "label": "Mill Ends Park, Portland, OR, USA",
        "layer": "venue",
        "locality": "Portland",
        "locality_gid": "whosonfirst:locality:101715829",
        "match_type": "exact",
        "name": "Mill Ends Park",
        "neighbourhood": "Downtown",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85867131",
        "region": "Oregon",
        "region_a": "OR",
        "region_gid": "whosonfirst:region:85688513",
        "source": "openstreetmap",
        "source_id": "node/4243944023",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -122.681441,
          45.511851,
        ],
        "type": "Point",
      },
      "properties": Object {
        "accuracy": "centroid",
        "confidence": 1,
        "continent": "North America",
        "continent_gid": "whosonfirst:continent:102191575",
        "country": "United States",
        "country_a": "USA",
        "country_gid": "whosonfirst:country:85633793",
        "county": "Multnomah County",
        "county_a": "MU",
        "county_gid": "whosonfirst:county:102081631",
        "distance": 1.273,
        "gid": "transit:station:2584-1136::TRIMET::station",
        "id": "2584-1136::TRIMET::station",
        "label": "PSU Urban Center/SW 5th & Mill MAX Station, Portland, OR, USA",
        "layer": "station",
        "locality": "Portland",
        "locality_gid": "whosonfirst:locality:101715829",
        "match_type": "exact",
        "name": "PSU Urban Center/SW 5th & Mill MAX Station",
        "neighbourhood": "Downtown",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85867131",
        "postalcode": "97201",
        "region": "Oregon",
        "region_a": "OR",
        "region_gid": "whosonfirst:region:85688513",
        "source": "transit",
        "source_id": "2584-1136::trimet::station",
        "street": "SW 5th & Mill",
      },
      "type": "Feature",
    },
  ],
  "geocoding": Object {
    "attribution": "http://lb-st-mapgeo.tri-met.org:4000/attribution",
    "engine": Object {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": Object {
      "focus.point.lat": 45.52,
      "focus.point.lon": -122.67,
      "lang": Object {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
      },
      "parsed_text": Object {},
      "parser": "addressit",
      "private": false,
      "querySize": 20,
      "size": 10,
      "text": "Mill Ends",
    },
    "timestamp": 1563949031708,
    "version": "0.2",
    "warnings": Array [
      "Invalid Parameter: api_key",
    ],
  },
  "isomorphicMapzenSearchQuery": Object {
    "api_key": "dummy-mapzen-key",
    "size": 10,
    "text": "Mill Ends",
  },
  "type": "FeatureCollection",
}
`;
